manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: renattsweighttrackerks 
spec:
  replicas: 3
  selector:
    matchLabels:
      app: renattsweighttrackerks
  template:
    metadata:
      labels:
        app: renattsweighttrackerks 
    spec:
      containers:
        - name: renattsweighttrackerks 
          image: weighttrackeracr.azurecr.io/renattsweighttrackerks
          imagePullPolicy: Always
          ports:
          - containerPort: 80
            protocol: TCP
