manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: weighttrackercicdks
  labels: 
    app: weighttrackercicdks
spec:
    type: ClusterIP
    ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
    selector:
        app: weighttrackercicdks
